--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.30.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "react": "^19.2.0",
